[gd_scene load_steps=3 format=2]

[ext_resource path="res://NetworkEngine/NetworkSetup.gd" type="Script" id=1]
[ext_resource path="res://NetworkEngine/Global.gd" type="Script" id=2]

[node name="World" type="Spatial"]
script = ExtResource( 2 )

[node name="NetworkSetup" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -175.0
margin_top = -90.0
margin_right = 175.0
margin_bottom = 90.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContainerNetwork" type="VBoxContainer" parent="NetworkSetup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -141.0
margin_top = -72.0
margin_right = -1.0
rect_scale = Vector2( 2, 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IPAdress" type="LineEdit" parent="NetworkSetup/ContainerNetwork"]
margin_right = 140.0
margin_bottom = 24.0
align = 1
placeholder_text = "IP Adress"

[node name="Host" type="Button" parent="NetworkSetup/ContainerNetwork"]
margin_top = 28.0
margin_right = 140.0
margin_bottom = 48.0
text = "Host"

[node name="Join" type="Button" parent="NetworkSetup/ContainerNetwork"]
margin_top = 52.0
margin_right = 140.0
margin_bottom = 72.0
text = "Join"

[connection signal="text_changed" from="NetworkSetup/ContainerNetwork/IPAdress" to="NetworkSetup" method="_on_IPAdress_text_changed"]
[connection signal="pressed" from="NetworkSetup/ContainerNetwork/Host" to="NetworkSetup" method="_on_Host_pressed"]
[connection signal="pressed" from="NetworkSetup/ContainerNetwork/Join" to="NetworkSetup" method="_on_Join_pressed"]
